# scrolex

./: .gitignore  .links.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.snapshots/: test_render.snap
benches/: benchmarks.rs
ci/: ubuntu-install-packages
cpp/: poppler.cc
packaging/flatpak/: README.md  com.andr2i.scrolex.yml
resources/: com.andr2i.scrolex.metainfo.xml  scrolex.desktop
src/: bg_job.rs  config.rs  image_page.rs  jump_stack.rs  lib.rs  links.rs  main.rs  mupdf_render.rs  outline.rs  page.rs  page2.rs  page_overlay.rs  page_state.rs  poppler.rs  render.rs  render_cache.rs  search.rs  selection.rs  state.rs  zoom.rs
src/page/: imp.rs  imp2.rs  mod.rs  page_number_imp.rs
src/page_overlay/: imp.rs  mod.rs
src/page_state/: imp.rs
src/state/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
ui/: app.ui  page.ui  style.css  ui.gresource.xml
